fix spacing

--- a/src/css/4-components/_display-item-info.scss
+++ b/src/css/4-components/_display-item-info.scss
@@ -27,7 +27,8 @@
 	// }
 
 	.display-item-name {
-		margin-bottom: 2.5em;
+		margin-top: 0;
+		margin-bottom: 2em;
 		position: relative;
 
 		.display-item-name-main {
@@ -39,12 +40,13 @@
 			letter-spacing: -0.5px;
 			position: relative;
 			display: inline-block;
+			padding-bottom: 8px; // add space so underline doesn't overlap next wrapped line
 			text-align: center;
 
 			&::after {
 				content: '';
 				position: absolute;
-				bottom: -8px;
+				bottom: 0; // place underline within padded area
 				left: 0;
 				width: 100%;
 				height: 3px;
@@ -200,7 +202,6 @@
 		display: flex;
 		flex-direction: row;
 		margin-top: 2em;
-		margin-left: 0.8em;
 		gap: 1em;
 		align-items: center;
 	}
